# Algorithms-and-data-structures

./: CMakeLists.txt
AlgorithmsOnStrings/: FromPrefixFuncToString.cpp  FromZFuncToString.cpp  KMP.cpp  NumberDifferentSubstrings.cpp  PrefixFunction.cpp  SuffixAutomaton.cpp  SuffixMachine.cpp  SuffixTree.cpp  Trie.cpp  TwoSuffixTrees.cpp  ZFunction.cpp
ClassesFromSTL/any/: any.h
ClassesFromSTL/array/: array.h
ClassesFromSTL/big_integer/: CMakeLists.txt  README.md  array.h  big_integer.cpp  big_integer.h  big_integer_public_test.cpp
ClassesFromSTL/calculator/calculator/: CMakeLists.txt  parser.cpp  parser.h
ClassesFromSTL/calculator/polish_notation/: CMakeLists.txt  expression.h  polish_notation.h  polish_notation_public_test.cpp
ClassesFromSTL/calculator/tokenize/: CMakeLists.txt  tokenize.cpp
ClassesFromSTL/frozen_set/: frozen_set.h  universal_hash.h
ClassesFromSTL/gcd/: gcd.h  gcd_public_test.cpp
ClassesFromSTL/geometry/: README.md  circle.h  ishape.h  line.h  point.h  polygon.h  ray.h  segment.h  vector.h
ClassesFromSTL/geometry/src/: circle.cpp  line.cpp  point.cpp  polygon.cpp  ray.cpp  segment.cpp  shape.cpp  vector.cpp
ClassesFromSTL/inserter/: CMakeLists.txt  README.md  inserter_public_test.cpp
ClassesFromSTL/itertools/: CMakeLists.txt
ClassesFromSTL/itertools/enumerate/: enumerate.h  enumerate_public_test.cpp
ClassesFromSTL/itertools/range/: range.h
ClassesFromSTL/itertools/reversed/: reversed.h  reversed_public_test.cpp
ClassesFromSTL/matrix/: CMakeLists.txt  matrix.h
ClassesFromSTL/move_iterator/: CMakeLists.txt  README.md  move_iterator_public_test.cpp
ClassesFromSTL/optional/: optional_public_test.cpp
ClassesFromSTL/rational/: CMakeLists.txt  gcd.h  rational.cpp  rational.h
ClassesFromSTL/reverse_iterator/: CMakeLists.txt  README.md  reverse_iterator_public_test.cpp
ClassesFromSTL/shared_ptr/: README.md  my_shared_ptr.h  shared_ptr.h  shared_ptr_public_test.cpp
ClassesFromSTL/string/: cppstring.cpp  cppstring.h
ClassesFromSTL/string_view/: CMakeLists.txt  README.md  string_view.cpp  string_view.h  string_view_public_test.cpp
ClassesFromSTL/sum/: README.md  sum.cpp  sum.h
ClassesFromSTL/unique_ptr/: unique_ptr.h
ClassesFromSTL/unordered_set/: unordered_set.h
ClassesFromSTL/vector/: my_vector.h  vector_public_test.cpp
DynamicProgramming/: BackPack.cpp  FastLIS.cpp  Fibonacci.cpp  LCS.cpp  LIS.cpp  LevenshteinDistance.cpp
Graphs/: ArticulationPoints.cpp  BFS.cpp  BFSForWeightedGraphs.cpp  BellmanFord.cpp  Boruvka.cpp  Bridges.cpp  DSU.cpp  Dijkstra.cpp  Dinic.cpp  EdmondsCarp.cpp  EulerPath.cpp  FLoydWarshall.cpp  FindCycle.cpp  FordFalkerson.cpp  Johnson.cpp  Kosaraju.cpp  Kruskal.cpp  MinDistanceWithLimits.cpp  NegativeCycle.cpp  NumberConnectivitiyComponents.cpp  Prim.cpp  SumWeightsEdgesOnline.cpp  TopSort.cpp  TwoToneGraph.cpp
LinearDataStructures/: Deque.cpp  QueueUsingTwoStacks.cpp  Stack.cpp
RMQ_RSQ/: ArrayPrefixSums.cpp  CorrectBracketSequence.cpp  FenwickTree.cpp  FenwickTree3D.cpp  MaxSum.cpp  SegmentTree.cpp  SegmentTreeWithUpdate.cpp  SparseTable.cpp  SparseTable2D.cpp  TreapRMQ.cpp  TreapRSQ.cpp
Sorts/: BubbleSort.cpp  BubbleSortOptimized.cpp  CountingSort.cpp  HeapSort.cpp  InplaceMergeSort.cpp  InsertSort.cpp  MergeSort.cpp  QuickSort.cpp  QuickSortOptimized.cpp  SelectionSort.cpp  SelectionSortOptimized.cpp
TasksUsingSTL/: AdjacencyList.cpp  Animals.cpp  Bank.cpp  Comparator.cpp  DataBase.cpp  Dictionary.cpp  ExpensiveCalculator.cpp  Frequency.cpp  Meeting.cpp
Templates/: BinarySearch.h  Heap.h  KthElement.h  Merge.h  MergeSort.h
Trees/: AVL.cpp  BST.cpp  Heap.cpp  Splay.cpp  Treap.cpp
