project(algorithms_and_data_structures)

cmake_minimum_required(VERSION 3.16)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address,undefined -Wall -Wextra -pedantic -Werror -Wno-self-assign-overloaded -Wno-missing-braces")
set(CMAKE_EXPORT_COMPILE_COMMANDS  ON)

include_directories(.)

add_subdirectory(ClassesFromSTL/gcd)
add_subdirectory(ClassesFromSTL/sum)
add_subdirectory(ClassesFromSTL/any)
add_subdirectory(ClassesFromSTL/array)
add_subdirectory(ClassesFromSTL/big_integer)
add_subdirectory(ClassesFromSTL/calculator)
add_subdirectory(ClassesFromSTL/frozen_set)
add_subdirectory(ClassesFromSTL/inserter)
add_subdirectory(ClassesFromSTL/itertools)
add_subdirectory(ClassesFromSTL/matrix)
add_subdirectory(ClassesFromSTL/move_iterator)
add_subdirectory(ClassesFromSTL/optional)
add_subdirectory(ClassesFromSTL/random)
add_subdirectory(ClassesFromSTL/rational)
add_subdirectory(ClassesFromSTL/reverse_iterator)
add_subdirectory(ClassesFromSTL/shared_ptr)
add_subdirectory(ClassesFromSTL/string)
add_subdirectory(ClassesFromSTL/string_view)
add_subdirectory(ClassesFromSTL/unique_ptr)
add_subdirectory(ClassesFromSTL/unordered_set)
add_subdirectory(ClassesFromSTL/vector)
add_subdirectory(ClassesFromSTL/geometry)

add_executable(QuickSort Sorts/QuickSort.cpp)
add_executable(MergeSort Sorts/MergeSort.cpp)
add_executable(BubbleSort Sorts/BubbleSort.cpp)
add_executable(BubbleSortOptimized Sorts/BubbleSortOptimized.cpp)
add_executable(CountingSort Sorts/CountingSort.cpp)
add_executable(HeapSort Sorts/HeapSort.cpp)
add_executable(InsertSort Sorts/InsertSort.cpp)
add_executable(QuickSortOptimized Sorts/QuickSortOptimized.cpp)
add_executable(SelectionSort Sorts/SelectionSort.cpp)
add_executable(SelectionSortOptimized Sorts/SelectionSortOptimized.cpp)
add_executable(InplaceMergeSort Sorts/InplaceMergeSort.cpp)
add_executable(BST Trees/BST.cpp)
add_executable(Splay Trees/Splay.cpp)
add_executable(AVL Trees/AVL.cpp)
add_executable(Deque LinearDataStructures/Deque.cpp)
add_executable(Stack LinearDataStructures/Stack.cpp)
add_executable(LevenshteinDistance DynamicProgramming/LevenshteinDistance.cpp)
add_executable(LCS DynamicProgramming/LCS.cpp)
add_executable(LIS DynamicProgramming/LIS.cpp)
add_executable(Fibonacci DynamicProgramming/Fibonacci.cpp)
add_executable(FastLIS DynamicProgramming/FastLIS.cpp)
add_executable(BackPack DynamicProgramming/BackPack.cpp)
add_executable(QueueUsingTwoStacks LinearDataStructures/QueueUsingTwoStacks.cpp)
add_executable(Heap Trees/Heap.cpp)

add_executable(Comparator TasksUsingSTL/Comparator.cpp)
add_executable(Animals TasksUsingSTL/Animals.cpp)
add_executable(Meeting TasksUsingSTL/Meeting.cpp)
add_executable(AdjacencyList TasksUsingSTL/AdjacencyList.cpp)
add_executable(Dictionary TasksUsingSTL/Dictionary.cpp)
add_executable(Bank TasksUsingSTL/Bank.cpp)
add_executable(Frequency TasksUsingSTL/Frequency.cpp)
add_executable(DataBase TasksUsingSTL/DataBase.cpp)
add_executable(ExpensiveCalculator TasksUsingSTL/ExpensiveCalculator.cpp)
add_executable(ArrayPrefixSums RMQ_RSQ/ArrayPrefixSums.cpp)
add_executable(MaxSum RMQ_RSQ/MaxSum.cpp)
add_executable(SparseTable RMQ_RSQ/SparseTable.cpp)
add_executable(FenwickTree RMQ_RSQ/FenwickTree.cpp)
add_executable(FenwickTree3D RMQ_RSQ/FenwickTree3D.cpp)
add_executable(SegmentTree RMQ_RSQ/SegmentTree.cpp)
add_executable(SegmentTreeWithUpdate RMQ_RSQ/SegmentTreeWithUpdate.cpp)
add_executable(SparseTable2D RMQ_RSQ/SparseTable2D.cpp)
add_executable(CorrectBracketSequence RMQ_RSQ/CorrectBracketSequence.cpp)
add_executable(Treap Trees/Treap.cpp)
add_executable(PrefixFunction AlgorithmsOnStrings/PrefixFunction.cpp)
add_executable(FromPrefixFuncToString AlgorithmsOnStrings/FromPrefixFuncToString.cpp)
add_executable(ZFunction AlgorithmsOnStrings/ZFunction.cpp)
add_executable(FromZFuncToString AlgorithmsOnStrings/FromZFuncToString.cpp)
add_executable(KMP AlgorithmsOnStrings/KMP.cpp)
add_executable(NumberDifferentSubstrings AlgorithmsOnStrings/NumberDifferentSubstrings.cpp)
add_executable(Trie AlgorithmsOnStrings/Trie.cpp)
add_executable(AhoCorasick AlgorithmsOnStrings/AhoCorasick.cpp)
add_executable(SuffixAutomaton AlgorithmsOnStrings/SuffixAutomaton.cpp)
add_executable(SuffixTree AlgorithmsOnStrings/SuffixTree.cpp)
add_executable(TwoSuffixTrees AlgorithmsOnStrings/TwoSuffixTrees.cpp)
add_executable(SuffixMachine AlgorithmsOnStrings/SuffixMachine.cpp)
add_executable(BFS Graphs/BFS.cpp)
add_executable(TwoToneGraph Graphs/TwoToneGraph.cpp)
add_executable(FindCycle Graphs/FindCycle.cpp)
add_executable(BFSForWeightedGraphs Graphs/BFSForWeightedGraphs.cpp)
add_executable(NumberConnectivitiyComponents Graphs/NumberConnectivitiyComponents.cpp)
add_executable(TopSort Graphs/TopSort.cpp)
add_executable(Kosaraju Graphs/Kosaraju.cpp)
add_executable(ArticulationPoints Graphs/ArticulationPoints.cpp)
add_executable(Bridges Graphs/Bridges.cpp)
add_executable(EulerPath Graphs/EulerPath.cpp)
add_executable(SumWeightsEdgesOnline Graphs/SumWeightsEdgesOnline.cpp)
add_executable(Prim Graphs/Prim.cpp)
add_executable(Kruskal Graphs/Kruskal.cpp)
add_executable(Boruvka Graphs/Boruvka.cpp)
add_executable(BellmanFord Graphs/BellmanFord.cpp)
add_executable(Dijkstra Graphs/Dijkstra.cpp)
add_executable(NegativeCycle Graphs/NegativeCycle.cpp)
add_executable(FLoydWarshall Graphs/FLoydWarshall.cpp)